# awstools

./: pyproject.toml
awstools/: __init__.py  communication.py  emr.py  glue.py  helper.py  s3.py
awstools/cli_tools/: cli_login.py
awstools/local_access/: __init__.py  helper.py  login.py
