[project]
name = "awstools"
version = "0.2.1"
authors = [{name="Dennis Liang", email="dliang1122@gmail.com"}] # please add your name if you contribute.
description = "AWS tools for Hilton Data science"
readme = "README.md"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3",
               "Operating System :: OS Independent"]
dependencies = ["jsons",
                "aiobotocore>=2.12.3",
                "botocore>=1.34.69",
                "awscli>=1.32.69",
                "boto3>=1.34.69",
                "s3fs",
                "paramiko",
                "securid",
                "aiohttp",
                "fsspec",
                "requests>=2.31.0",
                "charset_normalizer>=3.3.2",
                "beautifulsoup4",
                "urllib3<2"
                ]
[project.urls]
"Homepage" = "https://github.com/dliang76/awstools"

[project.scripts]
aws_saml_login = "awstools:aws_auth"
aws_console = "awstools:aws_console_auth"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['awstools*']
